# Olaf

./: Cargo.toml
aggregate/: group_signature.json
result/: round3_result.json
round1/: combined_data.json  public_message.json  received_public_messages.json  received_round1_public_messages.json
round1_frost/: round1_frost_result.json  round3_result.json  signing_commitments.json
round2/: messages.json  public_data.json  received_round2_private_messages.json  received_round2_public_messages.json
round2_frost/: frost_round2_result.json  payload.json  signature_shares.json
round3/: round3_result.json
src/: main.rs
