[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
schnorrkel = { git = "https://github.com/Fiono11/schnorrkel", branch = "master", features = [
    "alloc",
    "aead",
    "serde",
] }
rand_core = { version = "0.6.2", default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
merlin = { version = "3.0.0", default-features = false }
